<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:text="@string/sound"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_gravity="center"/>

    <Button
        android:text="@string/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/languages" />

    <Button
        android:text="@string/eraseprogress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress" />
</LinearLayout>